# HaliteIO

./: .gitignore  CMakeLists.txt  DummyBot.py  LICENSE  MyBot  MyBot.cpp  MyBot.py  README.md  batcher.hpp  install.sh  model.hpp  resnet.hpp  running  types.hpp
game_engine/: CMakeLists.txt  CMakeLists.txt.in  agent.cpp  agent.hpp  batcher.hpp  chartResults.py  install.sh  main.cpp  main_old.cpp  model.hpp  types.hpp
game_engine/config/: Constants.cpp  Constants.hpp
game_engine/core/: Agent.cpp  Agent.hpp  Halite.cpp  Halite.hpp  HaliteImpl.cpp  HaliteImpl.hpp  Statistics.cpp  Statistics.hpp  Store.cpp  Store.hpp  model.hpp
game_engine/core/command/: Command.cpp  Command.hpp  CommandTransaction.cpp  Transaction.cpp
game_engine/error/: CommandError.cpp  CommandError.hpp
game_engine/logging/: Logging.hpp  PlayerLog.hpp
game_engine/mapgen/: SymmetricalTile.cpp  SymmetricalTile.hpp  TileGenerator.cpp
game_engine/model/: Cell.cpp  Cell.hpp  Entity.cpp  Entity.hpp  Enumerated.hpp  Grid.cpp  Grid.hpp  Location.cpp  Location.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp
game_engine/replay/: GameEvent.cpp  GameEvent.hpp  Replay.cpp  Replay.hpp
game_engine/test/: PlayerTest.cpp
